--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #2f77133b;
 }
 
 h1 {
@@ -65,4 +66,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.btn{
+  margin-left: 25px;
 }
